# brb-open-data

./: .env  .gitignore  README.md  gitignore  pyproject.toml  visualization_taux_inflation.py  visualization_taux_inflation_dashboard.py
Config/: sources.yml
_site/: pyproject.toml  requirements.txt
_site/data/parsed/importation_bif/: 20250802_parsed.xlsx
_site/data/raw/importation_bif/: 29686_IV.5.Importations_20_20par_20pays_20de_20provenance_20_28en_20BIF_29_20250802.xlsx
_site/website/: index.html
analytics/: 2.0.1  README.md  pyproject.toml  test_database.py
analytics/config/: sources.yml
analytics/config/ca/: combined_cacert.pem
analytics/data/parsed/importation_bif/: 20250802__toc.csv  20250802__toc.json
analytics/docs/: database_integration.md  how_to_run_scripts.md  running_local_server.md
analytics/src/etl/: download_manager.py
analytics/src/parse/: importation_bif_parser.py
analytics/src/parse/database/: __init__.py  db_load.py  loader.py  queries.py  schema.py  sql_load.py
analytics/src/parse/importation_bif/: countries.csv  load.py  parser.py  transform.py
analytics/src/parse/importation_categories/: categories.csv  load.py  parser.py  transform.py
analytics/src/parse/importation_countries/: load.py  parser.py  transform.py
cleaned_data/: cleaned_importation_bif.csv  cleaned_importation_tons.csv  cleaned_importations.csv  cleaned_taux_20d_27inflation_20juillet_202023.csv  cleaned_taux_d'inflation_juin_2023.csv  processed_data.csv  processed_importation_tons.csv
data/: IV.6.Importations par pays de provenance (en T)_9.xlsx  IV.6.Importations_20par_20pays_20de_20provenance_20_28en_20T_29_10.xlsx  Taux%20d%27Inflation%20Juin%202023.xlsx  Taux_20d_27Inflation_20Juillet_202023.xlsx  etl_importations.py  ~$Taux_20d_27Inflation_20Juillet_202023.xlsx
docs/: how_to_run_scripts.md
(+64 files in other folders)
